--- a/src/App.css
+++ b/src/App.css
@@ -54,7 +54,7 @@
   background-color: #f8f9fa;
 }
 .section.section-experience {
-  background-image: url("src/assets/images/background2.jpg");
+  background-image: url("./assets/images/background2.jpg");
   background-size: cover;        
   background-position: center;  
   background-repeat: no-repeat;
@@ -137,7 +137,7 @@
 
 /* background image */
 .section-home {
-  background-image: url("src/assets/images/background.jpg");
+  background-image: url("./assets/images/background.jpg");
   background-size: cover;        
   background-position: center;  
   background-repeat: no-repeat;
@@ -210,7 +210,7 @@
 
 
 .footer {
-  background-image: url("src/assets/images/background2.jpg");
+  background-image: url("./assets/images/background2.jpg");
   background-size: cover;           /* make it fill */
   background-position: center;      /* center image */
   background-repeat: no-repeat;     /* no tiling */
